bdr.BDR.scala.error
Compilation error:
BDR:7: error: not found: value isOverL
  else if (isOverL()){
           ^BDR:12: error: not found: value isOverI
  else if (isOverI()){
           ^BDR:17: error: not found: value isOverB
  else if (isOverB()){
           ^BDR:22: error: not found: value isOverC
  else if (isOverC()){
           ^BDR:27: error: not found: value isOverZ
  else if (isOverZ()){
           ^BDR:30: error: not found: value isOverY
  else if (isOverY()){
           ^BDR:34: error: not found: value isOverX
  else if (isOverX()){
           ^